--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <style>
     input {
       font-size: 2rem;
+    }
+
+    img {
+      border-radius: 4px;
+      width: 400px
     }
   </style>
 </head>
@@ -12,18 +18,19 @@
 <body>
   <div class="container">
     <div id="image_content">
-        <img src="" id="image" data-id=""/>
-        <span>Likes:
-            <span id="likes"></span>
-        </span>
-        <button id="like-button">Like</button>
-        <form id="comment_form">
-            <input id="comment-input" type="text" name="comment" placeholder="Add Comment"/>
-            <input type="submit" value="Submit"/>
-        </form>
-        <ul id="comments"></ul>
+      <img src="" id="image" data-id="" /><br />
+      <span>Likes:
+        <span id="likes"></span>
+      </span>
+      <button id="like-button">Like</button>
+      <form id="comment_form">
+        <input id="comment-input" type="text" name="comment" placeholder="Add Comment" />
+        <input type="submit" value="Submit" />
+      </form>
+      <ul id="comments"></ul>
     </div>
   </div>
   <script type="text/javascript" src='index.js'></script>
-  </body>
+</body>
+
 </html>
